[tool.poetry]
name = "thresh"
version = "0.1.0"
description = "WIP"
authors = ["RivenMedia"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scalar-fastapi = "^1.0.3"
fastapi = "^0.115.0"
requests = "^2.32.3"
asyncio = "^3.4.3"
rank-torrent-name = "^1.2.1"
parsett = "^1.3.1"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
uvicorn = "^0.30.6"
loguru = "^0.7.2"
rich = "^13.8.1"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
